Se creo la carpeta de JS con alertas de saludo incial, se agrego mas información al index

--- a/PRUEBAS/index.html
+++ b/PRUEBAS/index.html
@@ -27,11 +27,25 @@
                 pero no solo eso, tambien contamos con <remark>Expereriencia</remark>
             </p>
         </section>
+        <section>
+            <h2>Quiere recibir información?</h2>
+            <form action="#">
+                <label for="nombre">Ingresa tu nombre</label>
+                <input type="text" name="nombre" id="txtNombre" placeholder="Ingresa tu nombre" required>
+                <label for="edad">Ingresa tu edad</label>
+                <input type="text" name="edad" id="txtedad" placeholder="Ingresa tu edad" required>
+                <input type="button" name="boton" id="btnAceptar" value="ingresar">
+            </form>
+        </section>
     </div>
     <footer>
         <p>
             &copy;LEPIOLA.inc. 
         </p>
     </footer>
+    <!--Para las alertas-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!--Para los scripts-->
+    <script src="./js/eventos.js"></script>
 </body>
 </html>
