adición en html y css

--- a/PRUEBAS/index.html
+++ b/PRUEBAS/index.html
@@ -14,6 +14,7 @@
         <h1>Bienvenido a la plaza de bienvendida</h1>
     </header>
     <div class="Contenedor">
+        <input type="button" id="btnIniciarSesion" value="Iniciar Sesión">
         <section>
             <h2>¡Que es lo que buscas?</h2>
             <ul>
