Se creo el form de crear Cuenta y se mejoro el css y js

--- a/PRUEBAS/index.html
+++ b/PRUEBAS/index.html
@@ -15,6 +15,7 @@
     </header>
     <div class="Contenedor">
         <input type="button" id="btnIniciarSesion" value="Iniciar Sesión">
+        <a href="./crearCuenta.php"><input type="button" id="btnCrearCuenta" value="Crear Cuenta"></a>
         <section>
             <h2>¡Que es lo que buscas?</h2>
             <ul>
