--- a/PRUEBAS/index.html
+++ b/PRUEBAS/index.html
@@ -14,8 +14,9 @@
         <h1>Bienvenido a la plaza de bienvendida</h1>
     </header>
     <div class="Contenedor">
-        <input type="button" id="btnIniciarSesion" value="Iniciar Sesión">
+        <a href="./login.php"><input type="button" id="btnIniciarSesion" value="Iniciar Sesión"></a>
         <a href="./crearCuenta.php"><input type="button" id="btnCrearCuenta" value="Crear Cuenta"></a>
+        <a href="./VISTAS/verUsuarios.php"><input type="button" id="VerUsuarios" value="Ver Usuarios"></a>
         <section>
             <h2>¡Que es lo que buscas?</h2>
             <ul>
