Se crearon alertas bonitas para el login recien creado. login funcional para usuario consumidor. Mejoras de js, css, html, logout, crearCuenta, loging.php e indexUsuario

--- a/PRUEBAS/index.html
+++ b/PRUEBAS/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plaza de vienbenida</title>
-    <!--Link para los iconos-->
+    <!--Link para los iconos--><!--ENLACE PAGINA ICONOS GRATIS https://fontawesome.com/v4/icons/ -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--Para el css-->
     <link rel="stylesheet" href="./CSS/stilos.css">
 </head>
 <body>
     <header>
-        <h1>Bienvenido a la plaza de bienvendida</h1>
+        <h1><i class="fa fa-hand-paper-o" aria-hidden="true"></i> Bienvenido a la plaza de bienvendida</h1>
     </header>
     <div class="Contenedor">
-        <a href="./login.php"><input type="button" id="btnIniciarSesion" value="Iniciar Sesión"></a>
-        <a href="./crearCuenta.php"><input type="button" id="btnCrearCuenta" value="Crear Cuenta"></a>
-        <a href="./VISTAS/verUsuarios.php"><input type="button" id="VerUsuarios" value="Ver Usuarios"></a>
+        <a href="./login.php"><button type="button" id="btnIniciarSesion"><i class="fa fa-sign-in" aria-hidden="true"></i> Iniciar Sesión</button></a>
+        <a href="./crearCuenta.php"><button type="button" id="btnCrearCuenta"><i class="fa fa-user-plus" aria-hidden="true"></i> Crear Cuenta</button></a>
+        <a href="./VISTAS/verUsuarios.php"><button type="button" id="VerUsuarios"><i class="fa fa-users" aria-hidden="true"></i> Ver usuarios </button></a>
         <section>
             <h2>¡Que es lo que buscas?</h2>
             <ul>
