Se cro un mini crud para modificar usuarios en el indexUsuario.php, se agregaron alertas correspondientes se creo recuperarContra.php pero aun no se codifica.

--- a/PRUEBAS/index.html
+++ b/PRUEBAS/index.html
@@ -16,6 +16,7 @@
     <div class="Contenedor">
         <a href="./login.php"><button type="button" id="btnIniciarSesion"><i class="fa fa-sign-in" aria-hidden="true"></i> Iniciar Sesión</button></a>
         <a href="./crearCuenta.php"><button type="button" id="btnCrearCuenta"><i class="fa fa-user-plus" aria-hidden="true"></i> Crear Cuenta</button></a>
+        <a href="./crearContra.php"><button type="button" id="btnCrearCuenta"><i class="fa fa-user-plus" aria-hidden="true"></i> Crear Usuario y contraseña</button></a>
         <a href="./VISTAS/verUsuarios.php"><button type="button" id="VerUsuarios"><i class="fa fa-users" aria-hidden="true"></i> Ver usuarios </button></a>
         <a href="../guia_git_vs_code.pdf" target="_blank"><button type="button"><i class="fa fa-eye" aria-hidden="true"> Ver manual git</i></button></a>
         <section>
