Se programo la parte de ingresar un servicio a nombre de un vehiculo de manera manual, se mejoro el css, y se añadieron las respectivas alertas en js

--- a/PRUEBAS/Machote.html
+++ b/PRUEBAS/Machote.html
@@ -40,6 +40,7 @@
         <input type="text" name="nombre" placeholder="Ejemplo victor manuel" required>
         <label for="contra">Ingresa tu contraseña</label>
         <input type="text"name="contra" placeholder="1234">
+        <input type="datetime-local">
         <button type="submit">Ingresar</button>
     </form>
     <article>
