Se creo una rama especial para trabajar y mejorar el js NADA QUE VER CON LA RAMA MAIN o alternas

--- a/PRUEBAS/index.html
+++ b/PRUEBAS/index.html
@@ -19,6 +19,7 @@
         <a href="./crearContra.php"><button type="button" id="btnCrearCuenta"><i class="fa fa-user-plus" aria-hidden="true"></i> Crear Usuario y contraseña</button></a>
         <a href="./VISTAS/verUsuarios.php"><button type="button" id="VerUsuarios"><i class="fa fa-users" aria-hidden="true"></i> Ver usuarios </button></a>
         <a href="../guia_git_vs_code.pdf" target="_blank"><button type="button"><i class="fa fa-eye" aria-hidden="true"> Ver manual git</i></button></a>
+        <a href="../JAVASCRIPT/html/form1.html"><button type="button"><i class="fa fa-thumb-tack" aria-hidden="true"></i> Ver JAVASCRIPT</button></a>
         <section>
             <h2>¡Que es lo que buscas?</h2>
             <ul>
